Fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2023,10 +2023,6 @@ body .site-search-button {
 
   /* Posts */
 
-  .site-content {
-    padding: 5.5em 0 0;
-  }
-
   .page .entry-title {
     font-size: 26px;
     font-size: 1.625rem;
